--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nanajanashia/argocd-app:2.1
+        image: nginx:2.1
         ports:
         - containerPort: 8080
