--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nginx:2.1
+        image: nginx:latest
         ports:
-        - containerPort: 8080
+        - containerPort: 80
