--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nginx:latest
+        image: nanajanashia/argocd-app:1.2
         ports:
-        - containerPort: 80
+        - containerPort: 8080
